--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,7 +1,76 @@
-.ctn-form {
-    background-image: url(https://images2.minutemediacdn.com/image/upload/c_crop,h_1190,w_2121,x_0,y_224/v1562630330/shape/mentalfloss/65008-gettyimages-843648918.jpg?itok=2sferPz5);
-    background-attachment: fixed;
-    background-position: center;
+.lgn {
     height: 100vh;
 }
 
+.ctn-form {
+    background-image: url(https://images2.minutemediacdn.com/image/upload/c_crop,h_1190,w_2121,x_0,y_224/v1562630330/shape/mentalfloss/65008-gettyimages-843648918.jpg?itok=2sferPz5);
+    background-position: center;
+    max-width: 100%;
+}
+
+.frm {
+    -webkit-box-shadow: -20px 13px 5px 1px #000000;
+    -moz-box-shadow: -20px 13px 5px 1px #000000;
+    -o-box-shadow: -20px 13px 5px 1px #000000;
+    box-shadow: -20px 13px 5px 1px #000000;
+}
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
