--- a/src/components/SingleProducts/SingleProduct.css
+++ b/src/components/SingleProducts/SingleProduct.css
@@ -1,24 +1,7 @@
-.sfondo {
-    background-image: url(http://www.pixelstalk.net/wp-content/uploads/2016/05/Download-Gaming-Wallpapers-Images.jpg);
-    max-width: 100%;
-    background-position: center;
-}
-
-.sfondo2 {
-    height: 100vh;
-}
-
-.titolo {
-    padding-top: 5em;
-    color: white
-}
-
-.imgSfondo {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    max-width: 100%;
-    max-height: 100%;
+.cardimg {
+    width: 100%;
+    height: 210px;
+    object-fit: contain;
 }
 
 .glow-on-hover {
