--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -4,7 +4,18 @@
     background-position: center;
 }
 
+.frt {
+    -webkit-box-shadow: -20px 13px 5px 1px white;
+    -moz-box-shadow: -20px 13px 5px 1px white;
+    -o-box-shadow: -20px 13px 5px 1px white;
+    box-shadow: -20px 13px 5px 1px white;
+    margin-top: 5px;
+}
+
 .sfondo2 {
+    background-image: url(http://www.pixelstalk.net/wp-content/uploads/2016/05/Download-Gaming-Wallpapers-Images.jpg);
+    background-position: center;
+    background-size: cover;
     height: 100vh;
 }
 
@@ -19,6 +30,11 @@
     padding: 5px;
     max-width: 100%;
     max-height: 100%;
+}
+
+
+.profiloimg {
+    width: 100%;
 }
 
 .glow-on-hover {
@@ -39,7 +55,7 @@
     background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     position: absolute;
     top: -2px;
-    left:-2px;
+    left: -2px;
     background-size: 400%;
     z-index: -1;
     filter: blur(5px);
@@ -76,7 +92,16 @@
 }
 
 @keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
 }
+
