--- a/src/components/SingleProducts/SingleProduct.css
+++ b/src/components/SingleProducts/SingleProduct.css
@@ -4,6 +4,10 @@
     object-fit: contain;
 }
 
+.card:hover {
+    box-shadow: 0px 0px 10px 10px rgb(0, 0, 0);
+}
+
 .glow-on-hover {
     width: 220px;
     height: 50px;
