--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,31 +1,18 @@
-.sfondo {
-    background-image: url(http://www.pixelstalk.net/wp-content/uploads/2016/05/Download-Gaming-Wallpapers-Images.jpg);
-    max-width: 100%;
-    background-position: center;
-}
-
 .frt {
-    -webkit-box-shadow: -20px 13px 5px 1px white;
-    -moz-box-shadow: -20px 13px 5px 1px white;
-    -o-box-shadow: -20px 13px 5px 1px white;
-    box-shadow: -20px 13px 5px 1px white;
+    -webkit-box-shadow: -20px 13px 5px 1px black;
+    -moz-box-shadow: -20px 13px 5px 1px black;
+    -o-box-shadow: -20px 13px 5px 1px black;
+    box-shadow: -20px 13px 5px 1px black;
     margin-top: 5px;
-}
-
-.sfondo2 {
-    background-image: url(http://www.pixelstalk.net/wp-content/uploads/2016/05/Download-Gaming-Wallpapers-Images.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
 }
 
 .titolo {
     padding-top: 5em;
-    color: white
+    color: black
 }
 
 .imgSfondo {
-    border: 1px solid #ddd;
+    border: 1px solid black;
     border-radius: 4px;
     padding: 5px;
     max-width: 100%;
@@ -35,6 +22,9 @@
 
 .profiloimg {
     width: 100%;
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 5px;
 }
 
 .glow-on-hover {
@@ -42,7 +32,7 @@
     height: 50px;
     border: none;
     outline: none;
-    color: #fff;
+    color: black;
     background: #111;
     cursor: pointer;
     position: relative;
