--- a/src/components/Navbar/Nvb.css
+++ b/src/components/Navbar/Nvb.css
@@ -4,3 +4,7 @@
     -webkit-box-shadow: 5px 5px 10px 2px #333333;
     -moz-box-shadow: 5px 5px 10px 2px #333333;
 }
+
+.pointer:hover {
+    cursor: pointer;
+}
